--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ html{
 }
 body{
     font-family: Poppins;
-
+    overflow-x: hidden;
 }
 .container{
     width: 1170px;
@@ -249,4 +249,182 @@ body{
     display: flex;
     justify-content: space-between;
     padding-bottom: 110px;
+}
+/* family */
+.family_wrapper{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-align: center;
+}
+.family_texts{
+    text-align: center;
+}
+.family_subtitle{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #E6B939;
+}
+.family_title{
+    margin-bottom: 8px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 43px;
+    color: #575445;
+}
+.family_text{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #575445;
+}
+.family_cards{
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.family_card{
+    background: url('../img/photos/accessories.png');
+    width: 379px;
+    height: 473px;
+    margin-top: 20px;
+    text-align: center;
+}
+.family_card2{
+    background: url('../img/photos/apparel.png');
+    width: 379px;
+    height: 473px;
+    margin-top: 20px;
+    text-align: center;
+    border-radius: 10px;
+}
+.family_card3{
+    background: url('../img/photos/climbing.png');
+    width: 379px;
+    height: 473px;
+    margin-top: 20px;
+    text-align: center;
+    border-radius: 10px;
+}
+.family_card4{
+    background: url('../img/photos/headwear.png');
+    width: 379px;
+    height: 473px;
+    margin-top: 20px;
+    text-align: center;
+}
+.family_card5{
+    background: url('../img/photos/hiking.png');
+    width: 379px;
+    height: 473px;
+    margin-top: 20px;
+    text-align: center;
+}
+.family_card6{
+    background: url('../img/photos/jackets.png');
+    width: 379px;
+    height: 473px;
+    margin-top: 20px;
+    text-align: center;
+}
+.family_card:hover{
+    box-shadow: 0 0 2px #575445;
+    border-radius: 10px;
+}
+.family_card2:hover{
+    box-shadow: 0 0 2px #575445;
+    border-radius: 10px;
+}
+.family_card3:hover{
+    box-shadow: 0 0 2px #575445;
+    border-radius: 10px;
+}
+.family_card4:hover{
+    box-shadow: 0 0 2px #575445;
+    border-radius: 10px;
+}
+.family_card5:hover{
+    box-shadow: 0 0 2px #575445;
+    border-radius: 10px;
+}
+.family_card6:hover{
+    box-shadow: 0 0 2px #575445;
+    border-radius: 10px;
+}
+.family_card_title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+    color: #575445;
+    margin-top: 39px;
+    margin-bottom: 10px;
+}
+.family_card_subtitle{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 20px;
+    color: #575445;
+}
+.family_read{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    color: #575445;
+}
+.family_read:hover{
+    text-decoration: underline;
+}
+/* team */
+.team{
+    background: url('../img/photos/background4.png') no-repeat center center / cover;
+}
+.team_wrapper{
+    display: flex;
+    justify-content: right;
+    padding-top: 512px;
+    padding-bottom: 40px;
+}
+.team_content{
+    /* 95 */
+    margin-right: -55px; 
+    background: #292C32;
+    border-radius: 16px;
+    width: 615px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 22px;
+}
+.team_icon{
+    margin-right: 8px;
+}
+.team_a{
+    display: flex;
+    align-items: center;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 12px;
+    color: #FFFFFF;
+}
+.team_a:hover{
+    text-decoration: underline;
 }
